welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:5: error: type mismatch;
 found   : Unit
 required: Int
	if((nums.length)!=0){
        ^